WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
10692
REGRESSION (
r14847
): Unnecessary scrollbars with position:relative; and overflow:auto;
https://bugs.webkit.org/show_bug.cgi?id=10692
Summary
REGRESSION (r14847): Unnecessary scrollbars with position:relative; and overf...
Thomas Steinacher
Reported
2006-09-02 06:16:04 PDT
The latest nightly WebKit (16191) displays unnecessary scrollbars when using position:relative; and overflow:auto;. This does not happen on Firefox and on the Safari included in Mac OS X 10.4.7. A testcase will be attached.
Attachments
testcase of the bug
(386 bytes, text/html)
2006-09-02 06:17 PDT
,
Thomas Steinacher
no flags
Details
Don't add relative offsets to {leftmost,rightmost,lowest}Position when not including self
(10.33 KB, patch)
2007-01-19 05:59 PST
,
mitz
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Thomas Steinacher
Comment 1
2006-09-02 06:17:28 PDT
Created
attachment 10364
[details]
testcase of the bug
mitz
Comment 2
2006-09-02 07:37:22 PDT
This is a regression from
r14847
(a fix for
bug 9314
).
Stephanie Lewis
Comment 3
2006-11-06 21:01:43 PST
radar 4823102
mitz
Comment 4
2007-01-19 05:59:12 PST
Created
attachment 12558
[details]
Don't add relative offsets to {leftmost,rightmost,lowest}Position when not including self
Darin Adler
Comment 5
2007-01-19 08:35:16 PST
Comment on
attachment 12558
[details]
Don't add relative offsets to {leftmost,rightmost,lowest}Position when not including self r=me
Sam Weinig
Comment 6
2007-01-21 12:48:27 PST
Landed in
r19012
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug