WebCore/rendering/RenderBox.cpp
@@ -2410,7 +2410,7 @@ int RenderBox::lowestPosition(bool includeOverflowInterior, bool includeSelf) co
     if (!includeSelf || !m_width)
         return 0;
     int bottom = m_height;
-    if (isRelPositioned())
+    if (includeSelf && isRelPositioned())
         bottom += relativePositionOffsetY();
     return bottom;
 }
@@ -2420,7 +2420,7 @@ int RenderBox::rightmostPosition(bool includeOverflowInterior, bool includeSelf)
     if (!includeSelf || !m_height)
         return 0;
     int right = m_width;
-    if (isRelPositioned())
+    if (includeSelf && isRelPositioned())
         right += relativePositionOffsetX();
     return right;
 }
@@ -2430,7 +2430,7 @@ int RenderBox::leftmostPosition(bool includeOverflowInterior, bool includeSelf) 
     if (!includeSelf || !m_height)
         return m_width;
     int left = 0;
-    if (isRelPositioned())
+    if (includeSelf && isRelPositioned())
         left += relativePositionOffsetX();
     return left;
 }
